Layout da primeira página inserido e com link para a segunda página com os flashcards

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
+    <meta name="description" content="App de flashcards para treinar sua memória com a metodologia Recall">
+    <meta name="keywords" content="flashcards, questionários, estudos">
+    <meta name="author" content="Victor Hugo Borges Simões">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
+    <title>Zap Recall</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
